test/language/spec/syntax/invalid/col_precision_illegal_char.topo
// TEST: column precision for illegal character
// EXPECT-ERROR: unexpected character
// EXPECT-LINE: 7
// EXPECT-COL: 13
namespace app {
  public:
    void run@();
}
